--- a/visualoom/src/components/SideBar/SideBar.css
+++ b/visualoom/src/components/SideBar/SideBar.css
@@ -1,14 +1,25 @@
 .main-navigation-items{
     color: rgb(34, 182, 195);
     font-size: 14px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem;
+    font-weight: 500;
+
 
 }
+
 .main-navigation-items:hover{
     color: rgb(34, 182, 195);
     font-size: 14px;
     
+    
+    
+    
+    
 }
 .navigation-heading{
-    color: rgba(43, 48, 59, 0.7);
+    
     font-size: 12px;
 }
