--- a/visualoom/src/pages/Folder/Folder.css
+++ b/visualoom/src/pages/Folder/Folder.css
@@ -1,7 +1,9 @@
 .page-container {
   padding: 24px;
-  max-width: 1000px;
+  width: -webkit-fill-available;
   margin: 0 auto;
+  height: -webkit-fill-available;
+  overflow: scroll;
 }
 
 .page-container h2 {
